--- a/Fastcampus/Chatting/gradle/libs.versions.toml
+++ b/Fastcampus/Chatting/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.7.2"
+credentials = "1.3.0"
 firebaseBom = "33.6.0"
+googleAuthLibraryOauth2HttpVersion = "1.17.0"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -14,6 +16,8 @@ okhttp = "4.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
+auth-google-auth-library-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2HttpVersion" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-database = { module = "com.google.firebase:firebase-database" }
