--- a/Fastcampus/Chatting/.gitignore
+++ b/Fastcampus/Chatting/.gitignore
@@ -17,3 +17,5 @@ local.properties
 google-services.json
 /google-services.json
 /app/src/main/res/values/api_key.xml
+service-account.json
+/service-account.json
