--- a/Fastcampus/NaverMap/app/src/main/AndroidManifest.xml
+++ b/Fastcampus/NaverMap/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -14,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NaverMap"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:remove="android:appComponentFactory"
+        tools:targetApi="p"
+        tools:ignore="ObsoleteSdkInt">
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="zyxwlz0f42" />
