--- a/Fastcampus/NaverMap/gradle/libs.versions.toml
+++ b/Fastcampus/NaverMap/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.7.2"
 androidxCoreKtx = "1.12.0"
 converterMoshi = "2.9.0"
+googleMaterial = "1.9.0"
 gson = "2.11.0"
 gsonVersion = "2.11.0"
 kotlin = "1.9.24"
@@ -36,6 +37,7 @@ maps-map-sdk = { module = "implementation 'com.naver.maps:map-sdk", version.ref 
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+material-v190 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
