--- a/Fastcampus/KakaoLogin/gradle/libs.versions.toml
+++ b/Fastcampus/KakaoLogin/gradle/libs.versions.toml
@@ -6,10 +6,14 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+mapsKtx = "5.0.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+playServicesLocation = "21.3.0"
 playServicesMaps = "19.0.0"
+playServicesMapsVersion = "18.2.0"
+secretsGradlePlugin = "2.0.1"
 v2All = "2.20.6"
 
 [libraries]
@@ -18,10 +22,14 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+maps-ktx = { module = "com.google.maps.android:maps-ktx", version.ref = "mapsKtx" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
+play-services-maps-v1820 = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMapsVersion" }
+secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
 v2-all = { module = "com.kakao.sdk:v2-all", version.ref = "v2All" }
 v2-cert = { module = "com.kakao.sdk:v2-cert", version.ref = "v2All" }
 v2-friend = { module = "com.kakao.sdk:v2-friend", version.ref = "v2All" }
