--- a/Fastcampus/KakaoLogin/app/src/main/AndroidManifest.xml
+++ b/Fastcampus/KakaoLogin/app/src/main/AndroidManifest.xml
@@ -18,21 +18,30 @@
         tools:targetApi="31">
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="oauth"
+                    android:scheme="kakao8f784e972742973545a426dd4fa23882" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MapActivity"
+            android:exported="false">
+        </activity>
         <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <uses-library
-            android:name="org.apache.http.legacy"
-            android:required="false" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
     </application>
 
 </manifest>
