--- a/Fastcampus/KakaoLogin/gradle/libs.versions.toml
+++ b/Fastcampus/KakaoLogin/gradle/libs.versions.toml
@@ -15,6 +15,9 @@ playServicesMaps = "19.0.0"
 playServicesMapsVersion = "18.2.0"
 secretsGradlePlugin = "2.0.1"
 v2All = "2.20.6"
+googleGmsGoogleServices = "4.4.2"
+firebaseDatabase = "21.0.0"
+firebaseAuthKtx = "23.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,8 +40,11 @@ v2-navi = { module = "com.kakao.sdk:v2-navi", version.ref = "v2All" }
 v2-share = { module = "com.kakao.sdk:v2-share", version.ref = "v2All" }
 v2-talk = { module = "com.kakao.sdk:v2-talk", version.ref = "v2All" }
 v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2All" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 
