--- a/Fastcampus/KakaoLogin/gradle/libs.versions.toml
+++ b/Fastcampus/KakaoLogin/gradle/libs.versions.toml
@@ -1,12 +1,14 @@
 [versions]
 agp = "8.7.2"
 firebaseBom = "33.6.0"
+glide = "4.14.2"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+lottie = "6.6.0"
 mapsKtx = "5.0.0"
 material = "1.12.0"
 activity = "1.9.3"
@@ -26,11 +28,13 @@ androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = 
 com-google-firebase-firebase-database = { module = "com.google.firebase:firebase-database" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-firebase-database = { module = "com.google.firebase:firebase-database" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 maps-ktx = { module = "com.google.maps.android:maps-ktx", version.ref = "mapsKtx" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
