--- a/Fastcampus/OrderPage/gradle/libs.versions.toml
+++ b/Fastcampus/OrderPage/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
 agp = "8.7.2"
+androidxConstraintlayout = "2.1.4"
+constraintlayoutCompose = "1.1.0"
+constraintlayoutComposeVersion = "1.1.0-beta01"
+constraintlayoutVersion = "2.2.0-beta01"
 glide = "4.14.2"
 gson = "2.11.0"
 kotlin = "1.9.24"
@@ -14,6 +18,10 @@ constraintlayout = "2.2.0"
 navigationUiKtx = "2.8.4"
 
 [libraries]
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutCompose" }
+androidx-constraintlayout-compose-v110beta01 = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "constraintlayoutComposeVersion" }
+androidx-constraintlayout-v214 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidxConstraintlayout" }
+androidx-constraintlayout-v220beta01 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigationUiKtx" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
