--- a/Fastcampus/WeatherAPI/gradle/libs.versions.toml
+++ b/Fastcampus/WeatherAPI/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.7.3"
+converterGson = "latest.version"
 gson = "2.11.0"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
@@ -12,9 +13,12 @@ activity = "1.9.3"
 constraintlayout = "2.2.0"
 playServicesLocation = "21.3.0"
 retrofit = "2.11.0"
+squareupConverterGson = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+converter-gson-v220 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGson" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
